@@ -36,8 +36,9 @@ Fixed bugs
 ----------
 
 - Input and Output: handle floating point numbers precisely in parsers and writers
-- SimpleSubstitution: correct feasibility tolerances on euclidean coprime substitutions
 - OPB-Parser: handle additional whitespaces
+- SimpleSubstitution: correct feasibility tolerances on euclidean coprime substitutions
+- SingleRow: eliminate computational overhead in row propagation
 
 Miscellaneous
 -------------
